Fixed alignment of current display and display history on calc screen

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,16 @@ header {
 
 #history {
     font-size: medium;
+    height: 20px;
+    width: 400px;
+    text-align: right;
+}
+
+#currentDisplay {
+    font-size: xx-large;
+    height: 30px;
+    width: 400px;
+    text-align: right;
 }
 
 #buttons{
